Fix Java 8 requirements